crates/dioform/tests/derive_contract/fail/global_rename_policy.rs
#![allow(dead_code)]

use dioform::Form;

#[derive(Form)]
#[form(rename_all = "PascalCase")]
struct GlobalRenameForm {
    first_name: String,
}

fn main() {}
